# mai-os-labs

./: .gitignore  README.md
kp/: CMakeLists.txt  client_main.cpp  game_main.cpp  make_db.cpp  server_main.cpp
kp/doc/: kp.docx
kp/include/: client.h  game.h  message.h  mmap.h  mutex.h  server.h
kp/src/: client.cpp  game.cpp  mutex.cpp  server.cpp
lab01/: CMakeLists.txt  README.md
lab01/doc/: lab01.docx
lab01/src/: child1.cpp  child2.cpp  main.cpp
lab02/: CMakeLists.txt  main.cpp
lab02/doc/: .~lock.lab02.docx#  lab02.docx
lab02/include/: sort.h  threadscount.h
lab02/src/: sort.cpp  threadscount.cpp
lab03/: CMakeLists.txt  child1.cpp  child2.cpp  parent.cpp
lab03/doc/: lab03.docx
lab03/include/: mmap.h
lab04/: CMakeLists.txt  main1.c  main2.c
lab04/doc/: lab04.docx
lab04/include/: lib_lab04.h
lab04/src/: lib_lab04_impl1.c  lib_lab04_impl2.c
lab08/doc/: lab08.docx
lab5-7/: CMakeLists.txt  calc_main.cpp  main.cpp
lab5-7/doc/: lab5-7.docx
lab5-7/include/: binary_tree.h  calculating_node.h  control_node.h  message_type.h
lab5-7/src/: calculating_node.cpp  control_node.cpp
